# Template

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  index.html  pyproject.toml  requirements.txt  vite.config.js
.github/workflows/: deploy.yml
configs/: default.yaml
data_sources/: brawl_stars_training_sources.json
docs/: tutorial.md
scripts/: benchmark_capture.py  build_image_manifest.py  dedupe_frames.py  extract_frames.py  train_yolo.py
src/: main.jsx  style.css
src/cv_emulator_pipeline/: app.py  core.py
tests/: test_geometry.py
