[project]
name = "cv-emulator-pipeline"
version = "0.1.0"
description = "Real-time CV pipeline for Android emulator screen capture, object detection, tracking, feature filtering, and ADB input."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "YuiCode0"}]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
